--- a/skin/frontend/pc/default/scss/_product.scss
+++ b/skin/frontend/pc/default/scss/_product.scss
@@ -262,8 +262,8 @@
                     max-width: 500px;
                     .sizeimage{
                         position: absolute;
-                        bottom: 23px;
-                        left: 284px;
+                        bottom: 0;
+                        left: 330px;
                         background:url(../images/commont/imgsizes.png) no-repeat center center;
                         width:220px;
                         height:200px;
