as low as price colot

--- a/skin/frontend/pc/default/scss/_category.scss
+++ b/skin/frontend/pc/default/scss/_category.scss
@@ -312,6 +312,11 @@
                             display: inline-block;
                         }
                     }
+                    .minimal-price-link{
+                        .label,.price{
+                            color:#f39;
+                        }
+                    }
                 }
             }
         }
