--- a/skin/frontend/pc/default/scss/_category.scss
+++ b/skin/frontend/pc/default/scss/_category.scss
@@ -306,7 +306,7 @@
                         
                         .price{
                             font-size: 14px;
-                            color: #333;
+                            color: #f39;
                             line-height: 18px;
                             height: 18px;
                             display: inline-block;
