--- a/app/design/frontend/pc/default/template/helpcenter/color_chart.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/color_chart.phtml
@@ -25,8 +25,8 @@
         <b>Satin chiffon</b>
     </p>
     <dl class="cdl">
-        <dt><img src="{{skin url='images/color/Satin_chiffon/Brown.jpg'}}"><span>Brown</span></dt>
-        <dd id="Satin_chiffon"><img src="{{skin url='images/color/Satin_chiffon/Satin_Chiffon.jpg'}}">
+        <dt><img src="<?php echo $this->getSkinUrl('')?>images/color/Satin_chiffon/Brown.jpg"><span>Brown</span></dt>
+        <dd id="Satin_chiffon"><img src="<?php echo $this->getSkinUrl('')?>images/color/Satin_chiffon/Satin_Chiffon.jpg">
             <div to="Satin_chiffon/Blue" title="Blue" style="left: 16px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
             </div>
             <div to="Satin_chiffon/Bright Rust Red" title="Rust Red" style="left: 84px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
@@ -108,8 +108,8 @@
         <b>Composite Silk</b>
     </p>
     <dl class="cdl">
-        <dt><img src="{{skin url='images/color/Composite_Silk/Watermelon.jpg'}}" width="157" height="157">Watermelon</dt>
-        <dd id="Composite_Silk"><img src="{{skin url='images/color/Composite_Silk/CompositeSilk.jpg'}}">
+        <dt><img src="<?php echo $this->getSkinUrl('')?>images/color/Composite_Silk/Watermelon.jpg" width="157" height="157">Watermelon</dt>
+        <dd id="Composite_Silk"><img src="<?php echo $this->getSkinUrl('')?>images/color/Composite_Silk/CompositeSilk.jpg">
             <div to="Composite_Silk/Black" title="Black" style="left: 16px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
             </div>
             <div to="Composite_Silk/Blue" title="Blue" style="left: 84px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
@@ -191,8 +191,8 @@
         <b>30D-Chiffon</b>
     </p>
     <dl class="cdl">
-        <dt><img src="{{skin url='images/color/30D-chiffion/Watermelon.jpg'}}" width="157" height="157">Watermelon</dt>
-        <dd id="Dchiffion"><img src="{{skin url='images/color/30D-chiffion/30Dchiffon.jpg'}}">
+        <dt><img src="<?php echo $this->getSkinUrl('')?>images/color/30D-chiffion/Watermelon.jpg" width="157" height="157">Watermelon</dt>
+        <dd id="Dchiffion"><img src="<?php echo $this->getSkinUrl('')?>images/color/30D-chiffion/30Dchiffon.jpg">
             <div to="30D-chiffion/White" title="White" style="left: 16px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
             </div>
             <div to="30D-chiffion/Watermelon" title="Watermelon" style="left: 84px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
@@ -266,8 +266,8 @@
         <b>Chiffon </b>
     </p>
     <dl class="cdl">
-        <dt><img src="{{skin url='images/color/chiffon/WaterMelon_93.jpg'}}" height="157" width="157"><span>Watermelon</span></dt>
-        <dd id="chiffon"><img src="{{skin url='images/color/chiffon/chiffion.jpg'}}">
+        <dt><img src="<?php echo $this->getSkinUrl('')?>images/color/chiffon/WaterMelon_93.jpg" height="157" width="157"><span>Watermelon</span></dt>
+        <dd id="chiffon"><img src="<?php echo $this->getSkinUrl('')?>images/color/chiffon/chiffion.jpg">
             <div to="chiffon/White_015" title="White" style="left: 16px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
             </div>
             <div to="chiffon/WaterMelon_93" title="Water Melon" style="left: 84px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
@@ -431,8 +431,8 @@
         <b>Elastic Woven Satin</b>
     </p>
     <dl class="cdl">
-        <dt><img src="{{skin url='images/color/elastic_satin/WaterMelon_808.jpg'}}" height="157" width="157"><span>Watermelon</span></dt>
-        <dd id="elastic_woven_satin"><img src="{{skin url='images/color/elastic_satin/elastic_satin.jpg'}}">
+        <dt><img src="<?php echo $this->getSkinUrl('')?>images/color/elastic_satin/WaterMelon_808.jpg" height="157" width="157"><span>Watermelon</span></dt>
+        <dd id="elastic_woven_satin"><img src="<?php echo $this->getSkinUrl('')?>images/color/elastic_satin/elastic_satin.jpg">
             <div to="elastic_satin/White_022" title="White" style="left: 16px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
             </div>
             <div to="elastic_satin/WaterMelon_808" title="Water Melon" style="left: 84px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
@@ -596,8 +596,8 @@
         <b>Organza</b>
     </p>
     <dl class="cdl">
-        <dt><img src="{{skin url='images/color/organza/WaterMelon_005.jpg'}}" height="157" width="157"><span>Watermelon</span></dt>
-        <dd id="organza"><img src="{{skin url='images/color/organza/organza.jpg'}}">
+        <dt><img src="<?php echo $this->getSkinUrl('')?>images/color/organza/WaterMelon_005.jpg" height="157" width="157"><span>Watermelon</span></dt>
+        <dd id="organza"><img src="<?php echo $this->getSkinUrl('')?>images/color/organza/organza.jpg">
             <div to="organza/White_022" title="White" style="left: 16px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
             </div>
             <div to="organza/WaterMelon_005" title="Water Melon" style="left: 84px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
@@ -761,8 +761,8 @@
         <b>Matte Satin</b>
     </p>
     <dl class="cdl">
-        <dt><img src="{{skin url='images/color/satin/WaterMelon_096.jpg'}}" height="157" width="157"><span>Watermelon</span></dt>
-        <dd id="matte_satin"><img src="{{skin url='images/color/satin/satin.jpg'}}">
+        <dt><img src="<?php echo $this->getSkinUrl('')?>images/color/satin/WaterMelon_096.jpg" height="157" width="157"><span>Watermelon</span></dt>
+        <dd id="matte_satin"><img src="<?php echo $this->getSkinUrl('')?>images/color/satin/satin.jpg">
             <div to="satin/White_082" title="White" style="left: 16px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
             </div>
             <div to="satin/WaterMelon_096" title="Water Melon" style="left: 84px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
@@ -926,8 +926,8 @@
         <b>Silk Like Satin</b>
     </p>
     <dl class="cdl">
-        <dt><img src="{{skin url='images/color/silk_like_satin/WaterMelon_083.jpg'}}" height="157" width="157"><span>Watermelon</span></dt>
-        <dd id="silk_like_satin"><img src="{{skin url='images/color/silk_like_satin/silk_like_satin.jpg'}}">
+        <dt><img src="<?php echo $this->getSkinUrl('')?>images/color/silk_like_satin/WaterMelon_083.jpg" height="157" width="157"><span>Watermelon</span></dt>
+        <dd id="silk_like_satin"><img src="<?php echo $this->getSkinUrl('')?>images/color/silk_like_satin/silk_like_satin.jpg">
             <div to="silk_like_satin/White_002" title="White" style="left: 16px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
             </div>
             <div to="silk_like_satin/WaterMelon_083" title="Water Melon" style="left: 84px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
@@ -1091,8 +1091,8 @@
         <b>Taffeta</b>
     </p>
     <dl class="cdl">
-        <dt><img src="{{skin url='images/color/taffeta/WaterMelon_065.jpg'}}" height="157" width="157"><span>Watermelon</span></dt>
-        <dd id="taffeta"><img src="{{skin url='images/color/taffeta/taffeta.jpg'}}">
+        <dt><img src="<?php echo $this->getSkinUrl('')?>images/color/taffeta/WaterMelon_065.jpg" height="157" width="157"><span>Watermelon</span></dt>
+        <dd id="taffeta"><img src="<?php echo $this->getSkinUrl('')?>images/color/taffeta/taffeta.jpg">
             <div to="taffeta/White_058" title="White" style="left: 16px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
             </div>
             <div to="taffeta/WaterMelon_065" title="Water Melon" style="left: 84px; top: 1px; opacity: 0; background-color: rgb(255, 255, 255);">
@@ -1607,7 +1607,7 @@
 
             jQuery(this).click(function() {
                 var title = jQuery(this).attr('title');
-                var url = '{{skin url="images/color/"}}' + jQuery(this).attr('to') + '.jpg';
+                var url = '<?php echo $this->getSkinUrl('')?>images/color/' + jQuery(this).attr('to') + '.jpg';
                 var html = '<img src="' + url + '" /><span>' + title + '</span>';
                 var bigImg = jQuery(this).parent().parent().find('dt');
                 bigImg.html('<br /><br /><span style="color:#666;font-style:italic">loading ' + title + '</span>')
