cms help center

--- a/app/design/frontend/pc/default/template/helpcenter/main.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/main.phtml
@@ -3,12 +3,12 @@
 <remove name="cms.wrapper"/>
 <block type="core/template" name="main" template="helpcenter/main.phtml" >
 <block type="core/template" name="help_left" template="helpcenter/left.phtml" />
-<block type="core/template" name="help_right" template="helpcenter/size_chart.phtml" />
+<block type="core/template" name="help_right" template="helpcenter/where-we-ship-to.phtml" />
 </block>
 </reference>
  * **/?>
 
 
-<div class="MT10 MB10">
+<div class="MT10 MB10 helpcenter">
     <?php echo $this->getChildHtml('',true,true);?>
 </div>
