--- a/app/design/frontend/pc/default/template/helpcenter/where-we-ship-to.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/where-we-ship-to.phtml
@@ -1,4 +1,4 @@
-<div class="twbox-help-shadow-s w998"><em class="i tl"></em><em class="i tr"></em><em class="i l"></em><em class="i r"></em>
+<div class="help_right twbox-help-shadow-s w998"><em class="i tl"></em><em class="i tr"></em><em class="i l"></em><em class="i r"></em>
     <div class="grid-head">
         <h2>Locations We Ship To</h2>
     </div>
