--- a/app/design/frontend/pc/default/template/helpcenter/cancel-order.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/cancel-order.phtml
@@ -1,4 +1,4 @@
-<div class="std"><p><span style="font-size: medium;"><strong>Cancel Order</strong></span></p>
+<div class="help_right"><p><span style="font-size: medium;"><strong>Cancel Order</strong></span></p>
     <p>1.How to Cancel an Unpaid Order</p>
     <p>If your payment for an order hasn't been made, you may cancel it by clicking "Cancel order" in your account on D-daydress.com.</p>
     <p>If your order is not paid within 40 days, it will be canceled automatically.</p>
