--- a/app/design/frontend/pc/default/template/helpcenter/faq.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/faq.phtml
@@ -1,4 +1,4 @@
-<div class="std"><p><span style="font-size: medium;"><strong>FAQ</strong></span></p>
+<div class="help_right"><p><span style="font-size: medium;"><strong>FAQ</strong></span></p>
     <p>1. Will I be required to pay import duty?</p>
     <p>Most of the countries do not charge import duty on low volume personal imports.</p>
     <p>2.Can I get a dress with extra length?</p>
