--- a/app/design/frontend/pc/default/template/helpcenter/payment-methods.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/payment-methods.phtml
@@ -1,4 +1,4 @@
-<div class="std">
+<div class="help_right">
 <p>
 <span style="font-size: medium;"><strong>Payment Methods</strong></span></p>
 <p>We&nbsp;accept&nbsp;the&nbsp;following&nbsp;methods&nbsp;of&nbsp;payment:</p>
