--- a/app/design/frontend/pc/default/template/helpcenter/processing-shipping-time.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/processing-shipping-time.phtml
@@ -1,4 +1,4 @@
-<div class="std"><p><span style="font-size: medium;"><strong>Processing &amp; Shipping Time</strong></span></p>
+<div class="help_right"><p><span style="font-size: medium;"><strong>Processing &amp; Shipping Time</strong></span></p>
     <p>The&nbsp;item's&nbsp;Tailoring/processing&nbsp;time&nbsp;is&nbsp;a&nbsp;maximum&nbsp;15&nbsp;days&nbsp;from&nbsp;the&nbsp;date&nbsp;of&nbsp;order&nbsp;placement except the peaking season.&nbsp;</p>
     <p>Tailoring period is about 10-15 calendar days and shipping time is about 2-8 calendar days.</p>
     <p>The&nbsp;processing&nbsp;time&nbsp;varies&nbsp;across&nbsp;the&nbsp;items.&nbsp;DHL&nbsp;delivers&nbsp;faster&nbsp;than&nbsp;EMS.&nbsp;Shipping&nbsp;delays also&nbsp;might&nbsp;be&nbsp;caused&nbsp;by&nbsp;unavoidable&nbsp;reasons&nbsp;like&nbsp;strikes,&nbsp;bad&nbsp;weather,&nbsp;etc.&nbsp;</p>
