--- a/app/design/frontend/pc/default/template/helpcenter/shipping-methods.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/shipping-methods.phtml
@@ -1,4 +1,4 @@
-<div class="std"><p><span style="font-size: medium;"><strong>Shipping Methods</strong></span></p>
+<div class="help_right"><p><span style="font-size: medium;"><strong>Shipping Methods</strong></span></p>
     <p>Standard shipping</p>
     <p>Standard shipping delivery time is between 4 - 8 days to all major destinations, standard shipping costs less but takes a bit longer than expedited shipping.</p>
     <p>&nbsp;</p>
