--- a/app/design/frontend/pc/default/template/helpcenter/main.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/main.phtml
@@ -3,11 +3,13 @@
 <remove name="cms.wrapper"/>
 <block type="core/template" name="main" template="helpcenter/main.phtml" >
 <block type="core/template" name="help_left" template="helpcenter/left.phtml" />
-<block type="core/template" name="help_right" template="helpcenter/where-we-ship-to.phtml" />
+<block type="core/template" name="help_right" template="helpcenter/help.phtml" />
 </block>
 </reference>
  * **/?>
-
+<style>
+    .std{display:none;}
+</style>
 
 <div class="MT10 MB10 helpcenter">
     <?php echo $this->getChildHtml('',true,true);?>
